[gd_scene load_steps=16 format=3 uid="uid://dddybrl6ypqqa"]

[ext_resource type="Script" uid="uid://f4wvoa67w6my" path="res://scenes/ui scenes/settings menu/settings_menu.gd" id="1_0insp"]
[ext_resource type="FontFile" uid="uid://d0himrrfmo8rw" path="res://assets/fonts/Comic Sans MS.ttf" id="1_lewux"]
[ext_resource type="StyleBox" uid="uid://bnmk0ug8dy1dk" path="res://assets/tres/buttons/button-hover.tres" id="2_q45dd"]
[ext_resource type="StyleBox" uid="uid://c1lvkim3hx1ac" path="res://assets/tres/buttons/button-disabled.tres" id="3_0insp"]
[ext_resource type="StyleBox" uid="uid://ccklq6jjabqq2" path="res://assets/tres/buttons/button.tres" id="4_rcxrp"]
[ext_resource type="Texture2D" uid="uid://drktmxef1hxx1" path="res://addons/kenney/kenney-input-prompts-49f37cc4e74fa661382f9752567924a8109b6568/addons/kenney_input_prompts/Keyboard & Mouse/Default/keyboard_backspace_icon.png" id="5_45hyw"]
[ext_resource type="StyleBox" uid="uid://253fucvdttjd" path="res://assets/tres/windows/menu.tres" id="6_q45dd"]
[ext_resource type="Shader" uid="uid://4uub8lq7c4my" path="res://scenes/ui scenes/pause menu/pause_menu.gdshader" id="8_rcxrp"]

[sub_resource type="GDScript" id="GDScript_rcxrp"]
script/source = "extends HSlider
@onready var valueLabel = $\"Volume Value\"

func _on_value_changed(value):
	valueLabel.text = str(int(value))
	GlobalSettings.masterVolume = int(value)
"

[sub_resource type="GDScript" id="GDScript_45hyw"]
script/source = "extends HSlider
@onready var valueLabel = $\"Volume Value\"

func _on_value_changed(value):
	valueLabel.text = str(int(value))
	GlobalSettings.musicVolume = int(value)
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_45hyw"]
shader = ExtResource("8_rcxrp")
shader_parameter/lod = 1.5

[sub_resource type="Animation" id="Animation_ubgno"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Back:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SubMenu Tabs:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u717h"]
resource_name = "blur and fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Back:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SubMenu Tabs:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_1gm4j"]
resource_name = "blur and fade pause menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Blur:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rufxp"]
_data = {
&"RESET": SubResource("Animation_ubgno"),
&"blur and fade": SubResource("Animation_u717h"),
&"blur and fade pause menu": SubResource("Animation_1gm4j")
}

[node name="Settings Menu" type="Control" node_paths=PackedStringArray("animationPlayer")]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0insp")
animationPlayer = NodePath("AnimationPlayer")

[node name="Back" type="Button" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -74.0
offset_right = 160.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_lewux")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("2_q45dd")
theme_override_styles/disabled = ExtResource("3_0insp")
theme_override_styles/hover_pressed = ExtResource("2_q45dd")
theme_override_styles/hover = ExtResource("2_q45dd")
theme_override_styles/pressed = ExtResource("2_q45dd")
theme_override_styles/normal = ExtResource("4_rcxrp")
text = "Back
"
icon = ExtResource("5_45hyw")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -310.0
offset_right = 265.0
offset_bottom = 310.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("6_q45dd")

[node name="SubMenu Tabs" type="TabContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -300.0
offset_right = 256.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_lewux")
theme_override_font_sizes/font_size = 30
theme_override_styles/tab_focus = ExtResource("4_rcxrp")
theme_override_styles/tab_disabled = ExtResource("3_0insp")
theme_override_styles/panel = ExtResource("6_q45dd")
theme_override_styles/tab_selected = ExtResource("4_rcxrp")
theme_override_styles/tab_hovered = ExtResource("2_q45dd")
theme_override_styles/tab_unselected = ExtResource("4_rcxrp")
current_tab = 2

[node name="Controls" type="Control" parent="SubMenu Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="SubMenu Tabs/Controls"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.0
offset_right = 166.0
offset_bottom = 142.0
grow_horizontal = 2

[node name="JumpKeybind" type="HBoxContainer" parent="SubMenu Tabs/Controls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Jump" type="Label" parent="SubMenu Tabs/Controls/VBoxContainer/JumpKeybind"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 50
text = "Jump"

[node name="Jump Key Choose" type="Button" parent="SubMenu Tabs/Controls/VBoxContainer/JumpKeybind"]
layout_mode = 2
size_flags_horizontal = 8
text = "press to choose key..."

[node name="AttackKeybind" type="HBoxContainer" parent="SubMenu Tabs/Controls/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Attack" type="Label" parent="SubMenu Tabs/Controls/VBoxContainer/AttackKeybind"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Attack"

[node name="Attack Key Choose" type="Button" parent="SubMenu Tabs/Controls/VBoxContainer/AttackKeybind"]
layout_mode = 2
text = "press to choose key..."

[node name="Audio" type="Control" parent="SubMenu Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="SubMenu Tabs/Audio"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -147.0
offset_right = 147.0
offset_bottom = 154.0
grow_horizontal = 2

[node name="Master Volume Label" type="Label" parent="SubMenu Tabs/Audio/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Master Volume"
horizontal_alignment = 1

[node name="Master Volume Slider" type="HSlider" parent="SubMenu Tabs/Audio/VBoxContainer"]
layout_mode = 2
theme_override_styles/slider = ExtResource("4_rcxrp")
theme_override_styles/grabber_area = ExtResource("4_rcxrp")
theme_override_styles/grabber_area_highlight = ExtResource("2_q45dd")
script = SubResource("GDScript_rcxrp")

[node name="Volume Value" type="Label" parent="SubMenu Tabs/Audio/VBoxContainer/Master Volume Slider"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -12.0
offset_right = 44.0
offset_bottom = 10.3333
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_lewux")
theme_override_font_sizes/font_size = 15
text = "0"

[node name="Music Volume Label" type="Label" parent="SubMenu Tabs/Audio/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Music Volume"
horizontal_alignment = 1

[node name="Music Volume Slider" type="HSlider" parent="SubMenu Tabs/Audio/VBoxContainer"]
layout_mode = 2
tooltip_text = "50"
theme_override_styles/slider = ExtResource("4_rcxrp")
theme_override_styles/grabber_area = ExtResource("4_rcxrp")
theme_override_styles/grabber_area_highlight = ExtResource("2_q45dd")
script = SubResource("GDScript_45hyw")

[node name="Volume Value" type="Label" parent="SubMenu Tabs/Audio/VBoxContainer/Music Volume Slider"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 4.0
offset_top = -12.0
offset_right = 44.0
offset_bottom = 10.3333
grow_horizontal = 0
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_lewux")
theme_override_font_sizes/font_size = 15
text = "0"

[node name="Graphics" type="Control" parent="SubMenu Tabs"]
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SubMenu Tabs/Graphics"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.5
offset_top = 10.0
offset_right = 90.5
offset_bottom = 62.0
grow_horizontal = 2

[node name="ResolutionOptionButton" type="OptionButton" parent="SubMenu Tabs/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_lewux")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("2_q45dd")
theme_override_styles/disabled = ExtResource("3_0insp")
theme_override_styles/hover_pressed = ExtResource("2_q45dd")
theme_override_styles/hover = ExtResource("2_q45dd")
theme_override_styles/pressed = ExtResource("2_q45dd")
theme_override_styles/normal = ExtResource("4_rcxrp")
selected = 1
item_count = 3
popup/item_0/text = "1920x1080"
popup/item_0/id = 0
popup/item_1/text = "1280x720"
popup/item_1/id = 1
popup/item_2/text = "1152x648"
popup/item_2/id = 2

[node name="CPUGPUParticlesOptionButton" type="OptionButton" parent="SubMenu Tabs/Graphics/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_lewux")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = ExtResource("2_q45dd")
theme_override_styles/disabled = ExtResource("3_0insp")
theme_override_styles/hover_pressed = ExtResource("2_q45dd")
theme_override_styles/hover = ExtResource("2_q45dd")
theme_override_styles/pressed = ExtResource("2_q45dd")
theme_override_styles/normal = ExtResource("4_rcxrp")
selected = 1
item_count = 2
popup/item_0/text = "CPU Particles"
popup/item_0/id = 0
popup/item_1/text = "GPU Particles"
popup/item_1/id = 1

[node name="Gameplay" type="Control" parent="SubMenu Tabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="Blur" type="ColorRect" parent="."]
z_index = -1
material = SubResource("ShaderMaterial_45hyw")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2508.0
offset_top = -2563.0
offset_right = 2492.0
offset_bottom = 2437.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rufxp")
}

[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="SubMenu Tabs/Audio/VBoxContainer/Master Volume Slider" to="SubMenu Tabs/Audio/VBoxContainer/Master Volume Slider" method="_on_value_changed"]
[connection signal="value_changed" from="SubMenu Tabs/Audio/VBoxContainer/Music Volume Slider" to="SubMenu Tabs/Audio/VBoxContainer/Music Volume Slider" method="_on_value_changed"]
[connection signal="item_selected" from="SubMenu Tabs/Graphics/VBoxContainer/ResolutionOptionButton" to="." method="_on_resolution_option_button_item_selected"]
[connection signal="item_selected" from="SubMenu Tabs/Graphics/VBoxContainer/CPUGPUParticlesOptionButton" to="." method="_on_cpugpu_particles_option_button_item_selected"]
